fix responive layout issues

--- a/resources/css/screen.css
+++ b/resources/css/screen.css
@@ -15984,7 +15984,7 @@ input.input-inner:focus {
 @media screen and (max-width: 900px) {
   /* line 233, resources/scss/pages/_historical-thresholds.scss */
   #historical-thresholds-viewport #threshold_value_form_field, #historical-thresholds-viewport #window_value_form_field {
-    margin-top: 24px;
+    margin-top: 36px;
   }
 }
 
