--- a/resources/scss/pages/_historical-thresholds.scss
+++ b/resources/scss/pages/_historical-thresholds.scss
@@ -232,7 +232,7 @@ $animation-duration: 0.4s;
 
    #threshold_value_form_field, #window_value_form_field {
      @media screen and (max-width: 900px) {
-       margin-top: 24px;
+       margin-top: 36px;
      }
    }
 
